--- a/src/skin/styles/AbsoluteLayout.less
+++ b/src/skin/styles/AbsoluteLayout.less
@@ -13,5 +13,5 @@ body .@{prefix}-abs-layout-item, .@{prefix}-abs-end {
 }
 
 .@{prefix}-container-body.@{prefix}-abs-layout {
-  overflow: hidden;
+  // overflow: hidden;
 }
