--- a/src/skin/styles/Variables.less
+++ b/src/skin/styles/Variables.less
@@ -44,7 +44,7 @@
 @btn-bg-hlight-hover:            transparent;
 @btn-border-hover:               transparent;
 @btn-border-active:              transparent;
-@btn-padding:                    6px 11px 5px 11px;
+@btn-padding:                    6px 7px 5px 7px;
 
 @btn-primary-bg:                 #2980b9;
 @btn-primary-bg-hlight:          #3498db;
@@ -137,7 +137,7 @@
 @infobox-error-text:             @notification-error-text;
 
 // Window
-@window-border:                  #c5c5c5;
+@window-border:                  transparent;
 @window-head-border:             @window-border;
 @window-head-close:              mix(@text, @window-bg, 60%);
 @window-head-close-hover:        mix(@text, @window-bg, 40%);
