--- a/src/skin/styles/MenuItem.less
+++ b/src/skin/styles/MenuItem.less
@@ -24,6 +24,13 @@
     margin: 2px 4px 0 -5px;
     float: left;
     opacity: 0.5;
+
+    &.@{prefix}-i-none ~ .@{prefix}-text {
+      // TinyMCE puts a non-breaking space between icons and the labels for spacing.
+      // This spacing is present even when the icon is set to 'none'.
+      // Small hack to undo the spacing the non-breaking space adds.
+      margin-left: -5px;
+    }
   }
 }
 
@@ -82,24 +89,13 @@
 }
 
 .@{prefix}-menu-item-normal.@{prefix}-active {
-  background-color: @menuitem-bg-active;
+  color: @menuitem-text-active !important;
+  background-color: @menuitem-bg-active !important;
 }
 
 .@{prefix}-menu-item-preview.@{prefix}-active {
   color: @menuitem-text-active !important;
   background-color: @menuitem-bg-active !important;
-}
-
-.@{prefix}-menu-item-normal.@{prefix}-active .@{prefix}-text {
-  color: @menuitem-text-active;
-}
-
-.@{prefix}-menu-item-normal.@{prefix}-active:hover {
-  color: @menuitem-text-inverse;
-}
-
-.@{prefix}-menu-item-normal.@{prefix}-active:focus {
-  color: @menuitem-text-inverse;
 }
 
 .@{prefix}-menu-item:hover, .@{prefix}-menu-item.@{prefix}-selected, .@{prefix}-menu-item:focus {
