Style editor border

--- a/client/src/styles/ui/skin.less
+++ b/client/src/styles/ui/skin.less
@@ -1,1 +1,9 @@
 @import '@tinymce/oxide/src/less/theme/theme';
+
+@tinymce-border-color: rgba(96, 125, 159, .25);
+@tinymce-border-radius: 3px;
+@tinymce-border-width: 1px;
+
+.mce-focused {
+    box-shadow: var(--focus-ring);
+}
