Improve the dialog header/title styling

--- a/client/src/styles/ui/skin.less
+++ b/client/src/styles/ui/skin.less
@@ -31,7 +31,11 @@
 @dialog-box-shadow: 0 25px 100px rgba(31, 41, 51, 0.5);
 @dialog-footer-background-color: #e4edf6;
 @dialog-footer-padding: var(--s) var(--xl);
-@dialog-header-padding: @dialog-body-padding @dialog-body-padding 0 @dialog-body-padding;
+@dialog-header-background-color: #e4edf6;
+@dialog-header-padding: (@dialog-body-padding / 2) @dialog-body-padding;
+@dialog-title-font-size: 18px;
+@dialog-title-font-weight: @font-weight-bold;
+@dialog-title-text-color: #3f4d5a;
 @font-stack: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 @input-label-font-weight: @font-weight-bold;
 @input-label-text-color: var(--medium-dark-text-color);
