--- a/client/src/styles/ui/skin.less
+++ b/client/src/styles/ui/skin.less
@@ -36,6 +36,8 @@
 @dialog-title-font-size: 18px;
 @dialog-title-font-weight: @font-weight-bold;
 @dialog-title-text-color: #3f4d5a;
+@editor-header-border: 1px solid @textfield-border-color;
+@editor-header-box-shadow: none;
 @font-stack: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 @input-label-font-weight: @font-weight-bold;
 @input-label-text-color: var(--medium-dark-text-color);
