Now reads custom editor configs

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -2,7 +2,7 @@
 
 {{ forms.selectField({
     label: 'TinyMCE Config'|t('tinymce'),
-    instructions: 'You can save custom TinyMCE configs as `.json` files in `config/tinymce/.'|t('tinymce')
+    instructions: 'You can save custom TinyMCE configs as `.json` files in `config/tinymce/`.'|t('tinymce')
         ~ ' <a href="https://www.tiny.cloud/docs/tinymce/6/" rel="noopener" target="_blank" class="go">' ~ 'View available settings'|t('tinymce') ~ '</a>',
     id: 'tinymceConfig',
     name: 'tinymceConfig',
