--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -1,3 +1,32 @@
+{#
+This file is based on the Redactor field settings template file, from the Redactor plugin version 3.0.2, by Pixel & Tonic, Inc.
+https://github.com/craftcms/redactor/blob/3.0.2/src/templates/_field_settings.html
+The Redactor plugin is released under the terms of the MIT License, a copy of which is included below.
+https://github.com/craftcms/redactor/blob/3.0.2/LICENSE.md
+
+The MIT License (MIT)
+
+Copyright (c) Pixel & Tonic, Inc.
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+#}
+
 {% import '_includes/forms' as forms %}
 
 {{ forms.selectField({
