--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -146,3 +146,4 @@ SOFTWARE.
             warning: (field.id ? 'Changing this may result in data loss.'|t('tinymce')),
         }) }}
     {% endif %}
+</div>
