Update distributed TinyMCE to 6.7.2

--- a/src/assets/field/src/styles/skin.less
+++ b/src/assets/field/src/styles/skin.less
@@ -14,6 +14,11 @@
     box-shadow: @textfield-focus-box-shadow;
 }
 
+// Prevent menu buttons occasionally being squashed together for some reason
+.tox-mbtn {
+    width: auto !important;
+}
+
 // Style dialogs to look like Craft modals
 
 @button-background-color: #e12d39;
