Increase line height of TinyMCE editor content

--- a/src/assets/field/src/styles/content.less
+++ b/src/assets/field/src/styles/content.less
@@ -2,6 +2,11 @@
 
 body {
     font-family: sans-serif;
+    line-height: 1.375;
+
+    h1, h2, h3, h4, h5, h6 {
+        line-height: 1.25;
+    }
 }
 
 table {
