Entries now draggable

--- a/src/assets/field/src/styles/content.less
+++ b/src/assets/field/src/styles/content.less
@@ -14,6 +14,12 @@ table {
 }
 
 // Nested entry card styling
+.craft-entry-card {
+    margin: 0.9em auto;
+    border: 0;
+    width: 100%;
+}
+
 .card {
     position: relative;
     display: flex;
