Make the overflow toolbar display properly with slideouts/modals

--- a/src/assets/field/src/styles/skin.less
+++ b/src/assets/field/src/styles/skin.less
@@ -62,3 +62,6 @@
 @toolbar-button-hover-background-color: @craft-button-secondary-hover-background-color;
 @toolbar-group-padding-x: 10px;
 @toolbar-group-separator-color: @textfield-border-color;
+
+// The default @z-index-sink is a fairly silly 1300
+@z-index-sink: 100;
