Now released under GPL 3 or later

--- a/src/assets/field/src/styles/skin.less
+++ b/src/assets/field/src/styles/skin.less
@@ -1,3 +1,8 @@
+/**
+ * @copyright Copyright (c) 2022-2024 Spicy Web
+ * @license GPL-3.0-or-later
+ */
+
 @import '@tinymce/oxide/src/less/theme/theme';
 
 @craft-button-secondary-background-color: rgba(96, 125, 159, 0.25);
