--- a/src/assets/field/src/styles/content.less
+++ b/src/assets/field/src/styles/content.less
@@ -1,3 +1,8 @@
+/**
+ * @copyright Copyright (c) 2022-2024 Spicy Web
+ * @license GPL-3.0-or-later
+ */
+
 @import '@tinymce/oxide/src/less/theme/content-ui';
 
 body {
