--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -1,4 +1,9 @@
 {#
+ # @copyright Copyright (c) 2022-2024 Spicy Web
+ # @license GPL-3.0-or-later
+ #}
+
+{#
 This file is based on the Redactor field settings template file, from the Redactor plugin version 3.0.2, by Pixel & Tonic, Inc.
 https://github.com/craftcms/redactor/blob/3.0.2/src/templates/_field_settings.html
 The Redactor plugin is released under the terms of the MIT License, a copy of which is included below.
