TinyMCESource now actually an enum

--- a/src/templates/plugin-settings.twig
+++ b/src/templates/plugin-settings.twig
@@ -16,7 +16,7 @@
             { value: 'tinyCloud', label: 'Tiny Cloud'|t('tinymce') },
             { value: 'custom', label: 'Custom…'|t('app') },
         ],
-        value: settings.nonNullTinymceSource(),
+        value: settings.tinymceSource.value,
         toggle: true,
         targetPrefix: 'tinymceSource-',
     }) }}
